--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -27,7 +27,8 @@
     "\n",
     "#include \"xtensor/xio.hpp\"\n",
     "\n",
-    "#include \"xframe/xvariable.hpp\""
+    "#include \"xframe/xvariable.hpp\"\n",
+    "#include \"xframe/xvariable_view.hpp\""
    ]
   },
   {
@@ -42,9 +43,16 @@
     "using coordinate_type = xf::xcoordinate<fstring, data_type::size_type>;\n",
     "\n",
     "using variable_type = xf::xvariable<coordinate_type, data_type>;\n",
-    "using dimension_type = xf::xdimension<fstring, std::size_t>;\n",
+    "using variable_view_type = xf::xvariable_view<variable_type&>;\n",
     "using saxis_type = xf::xaxis<fstring, std::size_t>; \n",
     "using iaxis_type = xf::xaxis<int, std::size_t>;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2D Data "
    ]
   },
   {
@@ -63,11 +71,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_type data = {{ 1., 2., 3.},\n",
+    "data_type data1 = {{ 1., 2., 3.},\n",
     "                  { 4., 5., 6.},\n",
     "                  { 7., 8., 9.}};\n",
-    "data(0, 2).has_value() = false;\n",
-    "data(1, 0).has_value() = false;"
+    "data1(0, 2).has_value() = false;\n",
+    "data1(1, 0).has_value() = false;"
    ]
   },
   {
@@ -76,13 +84,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "variable_type variable = variable_type(\n",
-    "    data, \n",
+    "auto var1 = variable_type(\n",
+    "    data1,\n",
     "    {\n",
     "        {abscissa, saxis_type({\"a\", \"c\", \"d\"})},\n",
     "        {ordinate, iaxis_type({1, 2, 4})}\n",
     "    }, \n",
-    "    dimension_type({abscissa, ordinate})\n",
+    "    {abscissa, ordinate}\n",
     ");"
    ]
   },
@@ -92,7 +100,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << variable.select({{\"abscissa\", \"a\"}, {\"ordinate\", 1}});"
+    "std::cout << var1.select({{\"abscissa\", \"a\"}, {\"ordinate\", 1}});"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << var1.locate(\"c\", 2);"
    ]
   },
   {
@@ -103,7 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "std::cout << variable.select({{\"abscissa\", \"c\"}, {\"ordinate\", 2}});"
+    "std::cout << var1.data();"
    ]
   },
   {
@@ -112,7 +129,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << variable.locate(\"c\", 2);"
+    "std::cout << var1.coordinates();"
    ]
   },
   {
@@ -121,7 +138,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << variable.data();"
+    "std::cout << var1.dimension_mapping();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto var2 = variable_type(\n",
+    "    data1, \n",
+    "    {\n",
+    "        {abscissa, saxis_type({\"a\", \"c\", \"e\"})},\n",
+    "        {ordinate, iaxis_type({1, 3, 4})}\n",
+    "    }, \n",
+    "    {abscissa, ordinate}\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_type res1 = var1 + var2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << res1.coordinates();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << res1.data();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3D data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fstring altitude = \"altitude\";"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_type data2 = {{{ 1.,  2., 3. },\n",
+    "                    { 4.,  5., 6. },\n",
+    "                    { 7.,  8., 9. }},\n",
+    "                   {{ 1.3, 1.5, 1.},\n",
+    "                    { 2., 2.3, 2.4},\n",
+    "                    { 3.1, 3.8, 3.}},\n",
+    "                   {{ 8.5, 8.2, 8.6},\n",
+    "                    { 7.5, 8.6, 9.7},\n",
+    "                    { 4.5, 4.4, 4.3}}};"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto var3 = variable_type(\n",
+    "    data2,\n",
+    "    {\n",
+    "        {abscissa, saxis_type({\"a\", \"c\", \"d\"})},\n",
+    "        {ordinate, iaxis_type({1, 2, 4})},\n",
+    "        {altitude, iaxis_type({0, 1, 2})},\n",
+    "    }, \n",
+    "    {altitude, abscissa, ordinate}\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << var3.data();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "variable_type res2 = var1 * var3;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << res2.dimension_mapping();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "std::cout << res2.data();"
    ]
   }
  ],
