Use pretty print in the notebook example

--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -120,25 +120,7 @@
    },
    "outputs": [],
    "source": [
-    "std::cout << var1.data();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std::cout << var1.coordinates();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std::cout << var1.dimension_mapping();"
+    "std::cout << var1;"
    ]
   },
   {
@@ -172,16 +154,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << res1.coordinates();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "std::cout << res1.data();"
+    "std::cout << res1;"
    ]
   },
   {
@@ -240,7 +213,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << var3.data();"
+    "std::cout << var3;"
    ]
   },
   {
@@ -258,18 +231,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << res2.dimension_mapping();"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "std::cout << res2.data();"
+    "std::cout << res2;"
    ]
   }
  ],
