--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -42,17 +42,14 @@
     "using data_type = xt::xoptional_assembly<xt::xarray<double>, xt::xarray<bool>>;\n",
     "using coordinate_type = xf::xcoordinate<fstring, data_type::size_type>;\n",
     "\n",
-    "using variable_type = xf::xvariable<coordinate_type, data_type>;\n",
-    "using variable_view_type = xf::xvariable_view<variable_type&>;\n",
-    "using saxis_type = xf::xaxis<fstring, std::size_t>; \n",
-    "using iaxis_type = xf::xaxis<int, std::size_t>;"
+    "using variable_type = xf::xvariable<coordinate_type, data_type>;"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2D Data "
+    "## Axis"
    ]
   },
   {
@@ -61,8 +58,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fstring abscissa = \"abscissa\";\n",
-    "fstring ordinate = \"ordinate\";"
+    "// Creation of an axis with `int` labels, given the size\n",
+    "std::cout << xf::axis(15);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// `int` labels, given the start and stop\n",
+    "std::cout << xf::axis(5, 15);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// `double` labels, given the start, stop and step\n",
+    "std::cout << xf::axis(0., 1., 0.1);"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "// `char` labels, given the start and stop\n",
+    "std::cout << xf::axis('d', 'r', char(2));"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variable with 2D Data "
    ]
   },
   {
@@ -87,8 +121,8 @@
     "auto var1 = variable_type(\n",
     "    data1,\n",
     "    {\n",
-    "        {abscissa, saxis_type({\"a\", \"c\", \"d\"})},\n",
-    "        {ordinate, iaxis_type({1, 2, 4})}\n",
+    "        {\"abscissa\", xf::axis({'a', 'c', 'd'})},\n",
+    "        {\"ordinate\", xf::axis({1, 2, 4})}\n",
     "    }\n",
     ");"
    ]
@@ -99,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << var1.select({{\"abscissa\", \"a\"}, {\"ordinate\", 1}});"
+    "std::cout << var1.select({{\"abscissa\", 'a'}, {\"ordinate\", 1}});"
    ]
   },
   {
@@ -108,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "std::cout << var1.locate(\"c\", 2);"
+    "std::cout << var1.locate('c', 2);"
    ]
   },
   {
@@ -131,8 +165,8 @@
     "auto var2 = variable_type(\n",
     "    data1, \n",
     "    {\n",
-    "        {abscissa, saxis_type({\"a\", \"c\", \"e\"})},\n",
-    "        {ordinate, iaxis_type({1, 3, 4})}\n",
+    "        {\"abscissa\", xf::axis({'a', 'c', 'e'})},\n",
+    "        {\"ordinate\", xf::axis({1, 3, 4})}\n",
     "    }\n",
     ");"
    ]
@@ -159,16 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3D data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fstring altitude = \"altitude\";"
+    "## Variable with 3D data"
    ]
   },
   {
@@ -197,9 +222,9 @@
     "auto var3 = variable_type(\n",
     "    data2,\n",
     "    {\n",
-    "        {abscissa, saxis_type({\"a\", \"c\", \"d\"})},\n",
-    "        {ordinate, iaxis_type({1, 2, 4})},\n",
-    "        {altitude, iaxis_type({0, 1, 2})},\n",
+    "        {\"abscissa\", xf::axis({'a', 'c', 'd'})},\n",
+    "        {\"ordinate\", xf::axis({1, 2, 4})},\n",
+    "        {\"altitude\", xf::axis(3)},\n",
     "    }\n",
     ");"
    ]
