Fixup image paths

--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "![alt text](http://quantstack.net/assets/images/xframe.svg)"
+    "![xframe](images/xframe.png)"
    ]
   },
   {
