Update notebook example

--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -28,7 +28,8 @@
     "#include \"xtensor/xio.hpp\"\n",
     "\n",
     "#include \"xframe/xvariable.hpp\"\n",
-    "#include \"xframe/xvariable_view.hpp\""
+    "#include \"xframe/xvariable_view.hpp\"\n",
+    "#include \"xframe/xvariable_masked_view.hpp\""
    ]
   },
   {
@@ -254,6 +255,27 @@
    "outputs": [],
    "source": [
     "std::cout << res2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto masked_view = xf::where(\n",
+    "    var3, \n",
+    "    not_equal(var3.axis<char>(\"abscissa\"), 'd') && not_equal(var3.axis<int>(\"ordinate\"), 2)\n",
+    ");"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "std::cout << masked_view;"
    ]
   }
  ],
