reindex view added to notebook

--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -548,7 +548,7 @@
    "source": [
     "## 2.3 Masking views\n",
     "\n",
-    "Masking view allow to select data points based on conditions expressed on labels. These conditons can be complicated boolean expressions."
+    "Masking views allow to select data points based on conditions expressed on labels. These conditons can be complicated boolean expressions."
    ]
   },
   {
@@ -605,6 +605,60 @@
    "outputs": [],
    "source": [
     "pressure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.4 Reindexing views\n",
+    "\n",
+    "Reindexing views give variables new set of coordinates to corresponding dimensions. Like other views, no copy is involved. Asking for values corresponding to new labels not found in the original set of coordinates returns missing values. In the next example, we reindex the `city` dimension."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dry_temperature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "auto temp = reindex(dry_temperature, {{\"city\", xf::axis({\"London\", \"New York\", \"Brussels\"})}});\n",
+    "temp"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The `reindex_like` is a shortcut that allows to reindex a variable given the set of coordinates of another variable"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "auto dry_temp2 = variable_type(\n",
+    "    dry_temperature_data,\n",
+    "    {\n",
+    "        {\"date\", time_axis},\n",
+    "        {\"city\", xf::axis({\"London\", \"New York\", \"Brussels\"})}\n",
+    "    }\n",
+    ");\n",
+    "auto temp2 = reindex_like(dry_temperature, dry_temp2);\n",
+    "temp2"
    ]
   },
   {
