coordinates slight refactoring

--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -53,7 +53,7 @@
     "using fstring = xtl::xfixed_string<55>;\n",
     "\n",
     "using data_type = xt::xoptional_assembly<xt::xarray<double>, xt::xarray<bool>>;\n",
-    "using coordinate_type = xf::xcoordinate<fstring, data_type::size_type>;\n",
+    "using coordinate_type = xf::xcoordinate<fstring>;\n",
     "\n",
     "using variable_type = xf::xvariable<coordinate_type, data_type>;"
    ]
