--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -23,9 +23,6 @@
     "#include <string>\n",
     "#include <iostream>\n",
     "\n",
-    "#include \"xtl/xbasic_fixed_string.hpp\"\n",
-    "\n",
-    "#include \"xtensor/xio.hpp\"\n",
     "#include \"xtensor/xrandom.hpp\"\n",
     "#include \"xtensor/xmath.hpp\"\n",
     "\n",
@@ -33,8 +30,7 @@
     "#include \"xframe/xvariable.hpp\"\n",
     "#include \"xframe/xvariable_view.hpp\"\n",
     "#include \"xframe/xvariable_masked_view.hpp\"\n",
-    "#include \"xframe/xreindex_view.hpp\"\n",
-    "#include \"xframe/xio.hpp\""
+    "#include \"xframe/xreindex_view.hpp\""
    ]
   },
   {
@@ -50,12 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using fstring = xtl::xfixed_string<55>;\n",
-    "\n",
-    "using data_type = xt::xoptional_assembly<xt::xarray<double>, xt::xarray<bool>>;\n",
-    "using coordinate_type = xf::xcoordinate<fstring>;\n",
-    "\n",
-    "using variable_type = xf::xvariable<coordinate_type, data_type>;"
+    "using coordinate_type = xf::xcoordinate<xf::fstring>;\n",
+    "using variable_type = xf::xvariable<double, coordinate_type>;\n",
+    "using data_type = variable_type::data_type;"
    ]
   },
   {
