--- a/notebooks/xframe.ipynb
+++ b/notebooks/xframe.ipynb
@@ -68,6 +68,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![xframe_summary](images/xframe_summary.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "![xframe_summary](images/xframe_summar.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
